# dispatcher-system

./: Cargo.toml  README.md  other.txt
examples/: insert.rs  ordering.rs  single.rs  test.rs
src/: dispatcher.rs  error.rs  guards.rs  inject.rs  lib.rs  main.rs  registry.rs  resources.rs  rules.rs  sorted.rs  stage.rs  unsorted.rs  world.rs
tests/: ordering.rs  parallel.rs  resource.rs  simple.rs
