[package]
name = "dispatcher-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
thread_local = "1.1.8"
petgraph = "0.6.4"
rayon = "1.9.0"
slotmap = "1.0.6"
num_cpus = "1.13.1"
seq-macro = "0.3.0"
paste = "1.0.7"
casey = "0.3.3"
lazy_static = "1.4.0"
pretty-type-name = "1.0.1"
arrayvec = "0.7.2"
log_err = "1.1.1"
log = "0.4.17"
vek = "0.16.1"
ahash = "0.7.6"
thiserror = "1.0.37"