[package]
name = "dispatcher-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
petgraph = "0.6.4"
num_cpus = "1.13.1"
pretty-type-name = "1.0.1"
ahash = "0.7.6"
ascii_table = "4.0.3"
thiserror = "1.0.63"
log = "0.4.22"

[dev-dependencies]
env_logger = "0.11.5"